2009-11-20  vadim  <vadim@vk.crocodile.org>

	* FWObject.cpp (FWObject::remove): Change in implicit behavior:
	removing an object does not move it to the Deleted Objects library
	anymore. This should be done in the GUI.

2009-11-14  vadim  <vadim@vk.crocodile.org>

	* FWObject.cpp: Added method FWObject::findIf - generic method
	that searches for child objects that match criteria impemented
	by a predicate object passed as an argument.

2009-11-11  vadim  <vadim@vk.crocodile.org>

	* Group.cpp (Group::isMember): Generic member that checks
	if given object is a member of the group.

2009-11-09  vadim  <vadim@vk.crocodile.org>

	* fwbuilder.dtd.in (TODO): Added attribute "dedicated_failover"
	to the element Interface and corresponding class.

2009-11-04  Vadim Kurland  <vadim@vk.crocodile.org>

	* fwbuilder.dtd.in: Added attribute any_opt to IPService

2009-11-02  Vadim Kurland  <vadim@vk.crocodile.org>

	* IPService.cpp (IPService::hasIpOptions): Method hasIpOptions()
	returns true if IPService object has one or more of the IP options:
	lsrr, rr, ssrr, ts, rtr_alt

	* fwbuilder.dtd.in: Added attributes rtralt and rtralt_value to
	IPService

2009-10-13  vadim  <vadim@vk.crocodile.org>

	* VERSION (VERSION): started v3.0.8

2009-09-18  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler.cpp (ItfNegation::processNext): fix for bug
	#2710034 "PF Compiler in 3.0.3 Unprotected Interface Bug". When we
	expand "interface" rule element which uses negation, skip
	unprotected interfaces.

2009-08-28  vadim  <vadim@vk.crocodile.org>

	* Interface.cpp (Interface::getOptionsObjectConst): Added
	Interface::getOptionsObjectconst(), Interface::isSlave()

2009-08-24  vadim  <vadim@vk.crocodile.org>

	* Compiler_cluster.cpp (Compiler::processFailoverGroup): cluster
	interface may not need an ip address, but this depends on the
	failover protocol. Adding check for when the address is missing.
	See #337

2009-08-12  vadim  <vadim@vk.crocodile.org>
