@@ -34,7 +34,7 @@ LIBFWBUILDER_SOLIB_SYMLINK2_VERSION=${LIBFWBUILDER_CURRENT}
 
 
 # Data format version
-FWBUILDER_XML_VERSION=14
+FWBUILDER_XML_VERSION=15
 
 # RELEASE="1"
 RELEASE="b@BUILD_NUM@"
