@@ -1,2 +1,2 @@
 #define LIBFWBUILDER_VERSION  "3.1.0"
-#define LIBFWBUILDER_FORMAT_VERSION  "14"
+#define LIBFWBUILDER_FORMAT_VERSION  "15"
