@@ -1,3 +1,10 @@
+2009-11-25  vadim  <vadim@vk.crocodile.org>
+
+	* fwbuilder.dtd.in (RuleSetOptions): added XML element
+	RuleSetOptions (child of Policy, NAT, Routing). Moved option
+	"ipt_mangle_only_rule_sets" from FirewallOptions to RuleSetOptions.
+	See fwbuilder:ticket:650, fwbuilder:ticket:709
+
 2009-11-20  vadim  <vadim@vk.crocodile.org>
 
 	* FWObject.cpp (FWObject::remove): Change in implicit behavior:
